--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header-logo">
-    <img src="imagens/logo-removebg-preview.png" alt="Logo Tripinha Materiais" class="logo">
+    <img src="imagens/Gemini_Generated_Image_gnrsmognrsmognrs-removebg-preview.png" alt="Logo Tripinha Materiais" class="logo">
     <div>
       <h1>Tripinha Materiais</h1>
       <p>Tudo Para A Sua Obra</p>
@@ -77,6 +77,118 @@
       <h2>Areia Fina Lavada</h2>
       <p>Por Metro Cubico</p>
       <p><strong>R$ 60,00</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/argamassa-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Argamassa</h2>
+      <p>ARGAMASSA AC-3 REBOTEC </p>
+      <p><strong>R$ 31,16</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/download-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Capacete de Segurança</h2>
+      <p>Capacete de Segurança Amarelo Prosafety - Soluwan</p>
+      <p><strong>R$ 13,54</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/pa-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Pá Quadrada</h2>
+      <p>Pá Quadrada Com Cabo De Madeira 71cm Tramontina</p>
+      <p><strong>R$ 39,90</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/carro_de_mão-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Carrinho De Mão</h2>
+      <p>Carrinho De Mão Galvanizado Canal</p>
+      <p><strong>R$ 151,00</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/vergalhão-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Aço</h2>
+      <p>Aço CA50 8,00mm - 12 metros - Takono</p>
+      <p><strong>R$ 40,64</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/coluna-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Coluna de Aço</h2>
+      <p>Coluna de Aço 8mm 7X17 - 6M</p>
+      <p><strong>R$ 149,00</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/trelica-1-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Treliça</h2>
+      <p>Treliça TG8 06mt</p>
+      <p><strong>R$ 39,99</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/furadeira-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Furadeira</h2>
+      <p>Furadeira Bosch Gbm 6 Re 350w</p>
+      <p><strong>R$ 224,89</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/parafusadeira-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Parafusadeira</h2>
+      <p>Furadeira Parafusadeira 3/8 pol. (10mm) Bateria 12V Lítio LD12SC com Maleta e 31 Acessórios Bivolt</p>
+      <p><strong>R$ 274,55</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/serra-mrmore-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Serra Mármore Makita</h2>
+      <p>Serra Mármore 1200W M0400B 220V Makita</p>
+      <p><strong>R$ 473,77</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/betoneira-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Betoneira 400LT</h2>
+      <p>Betoneira 400LT MAX PRO 127/220V Monofásico - CSM</p>
+      <p><strong>R$ 5.110,89</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/Serra-Tico-Tico-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Serra Tico-Tico</h2>
+      <p>Serra Tico-Tico GST 75 E 220V - Bosch</p>
+      <p><strong>R$ 849,99</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/tomada-norm-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Tomada com 2 entradas</h2>
+      <p>Tomada com 2 entradas padrão distanciadas com placa 10A Habitat Fame</p>
+      <p><strong>R$ 19,90</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/tomada-int-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Tomada com Interruptor Inteligente</h2>
+      <p>Tomada com Interruptor Inteligente ETS 2001| Intelbras</p>
+      <p><strong>R$ 180,90</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/fios-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>10 Metros de fios 26 Awg</h2>
+      <p>10 Metros de fios 26 Awg - Cabinho flexível condutor elétrico</p>
+      <p><strong>R$ 26,32</strong></p>
+      <a href="compra.html" class="btn">Comprar</a>
+    </div>
+    <div class="produto2">
+      <img src="imagens/luva-removebg-preview.png" alt="Cimento" style="width:100%; height:150px; object-fit:cover;">
+      <h2>Luva De Cobertura</h2>
+      <p>Luva De Cobertura Vaqueta Eletricista Para Luva Isolante Zanel</p>
+      <p><strong>R$ 32,00</strong></p>
       <a href="compra.html" class="btn">Comprar</a>
     </div>
   </main>
